language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_file_removes_unnecessary_alias.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble/wobble.{Wibble} as wibble\n\npub fn main() -> wibble.Wibble {\n  assert wibble.wibble == Wibble\n  wibble.Wobble\n}\n"
---
----- BEFORE RENAME
-- wibble/wobble.gleam

pub type Wibble {
  Wibble
  Wobble
}

pub const wibble = Wibble


-- app.gleam

import wibble/wobble.{Wibble} as wibble

pub fn main() -> wibble.Wibble {
  assert wibble.wibble == Wibble
  wibble.Wobble
}


----- AFTER RENAME
-- wibble/wibble.gleam

pub type Wibble {
  Wibble
  Wobble
}

pub const wibble = Wibble


-- app.gleam

import wibble/wibble.{Wibble}

pub fn main() -> wibble.Wibble {
  assert wibble.wibble == Wibble
  wibble.Wobble
}
