language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_argument_label_across_modules.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble.{replace}\n\npub fn main() {\n  replace(in: \"hello\", each: \"l\")\n  wibble.replace(in: \"world\", each: \"o\")\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam
pub fn replace(in string: String, each pattern: String) -> String {
  todo
}

-- app.gleam

import wibble.{replace}

pub fn main() {
  replace(in: "hello", each: "l")
          ↑▔                     
  wibble.replace(in: "world", each: "o")
}


----- AFTER RENAME
-- wibble.gleam
pub fn replace(inside string: String, each pattern: String) -> String {
  todo
}

-- app.gleam

import wibble.{replace}

pub fn main() {
  replace(inside: "hello", each: "l")
  wibble.replace(inside: "world", each: "o")
}
