language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_argument_label_does_not_rename_other_function.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn replace(in string: String) -> String {\n  todo\n}\n\npub fn insert(in list: List(a)) -> List(a) {\n  todo\n}\n\npub fn main() {\n  replace(in: \"hello\")\n  insert(in: [])\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn replace(in string: String) -> String {
               ↑▔                            
  todo
}

pub fn insert(in list: List(a)) -> List(a) {
  todo
}

pub fn main() {
  replace(in: "hello")
  insert(in: [])
}


----- AFTER RENAME
-- app.gleam

pub fn replace(inside string: String) -> String {
  todo
}

pub fn insert(in list: List(a)) -> List(a) {
  todo
}

pub fn main() {
  replace(inside: "hello")
  insert(in: [])
}
