language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_argument_label_expands_label_shorthand.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn replace(in string: String, each pattern: String) -> String {\n  todo\n}\n\npub fn main() {\n  let in = \"hello\"\n  replace(in:, each: \"l\")\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn replace(in string: String, each pattern: String) -> String {
               ↑▔                                                  
  todo
}

pub fn main() {
  let in = "hello"
  replace(in:, each: "l")
}


----- AFTER RENAME
-- app.gleam

pub fn replace(inside string: String, each pattern: String) -> String {
  todo
}

pub fn main() {
  let in = "hello"
  replace(inside: in, each: "l")
}
