language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_argument_label_from_definition.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn replace(in string: String, each pattern: String) -> String {\n  todo\n}\n\npub fn main() {\n  replace(in: \"hello\", each: \"l\")\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn replace(in string: String, each pattern: String) -> String {
               ↑▔                                                  
  todo
}

pub fn main() {
  replace(in: "hello", each: "l")
}


----- AFTER RENAME
-- app.gleam

pub fn replace(inside string: String, each pattern: String) -> String {
  todo
}

pub fn main() {
  replace(inside: "hello", each: "l")
}
